2007-10-20  Brian Matherly <brian@gramps-project.org>
	* src/plugins/BookReport.py: Get book report working again.
	* src/plugins/SimpleBookTitle.py: Get title page working again.

2007-10-20  Gary Burton  <gary.burton@zen.co.uk>
	* src/plugins/NarrativeWeb.py: display event reference notes and attributes

2007-10-20  Benny Malengier  <benny.malengier@gramps-project.org>
	* src/gramps_main.py: if error and terminate, don't show family manager before exit
	* src/gramps.py: terminate if wrong python version

2007-10-20  Benny Malengier  <benny.malengier@gramps-project.org>
	* src/gramps_main.py: terminate if wrong python version

2007-10-20  Benny Malengier  <benny.malengier@gramps-project.org>
	* src/DisplayTabs/_BackRefModel.py: allow repository in backref (backref of note)
	* src/DisplayTabs/_BackRefList.py: allow edit of repository from backrefs

2007-10-20  Benny Malengier  <benny.malengier@gramps-project.org>
	* README: gramps 3.0 requires python 2.5

2007-10-19  Benny Malengier  <benny.malengier@gramps-project.org>
	* src/DisplayTabs/_EmbeddedList.py: traceback to console on ErrorDialog
	* src/DisplayTabs/_NoteTab.py:
	* src/Selectors/_SelectNote.py:
	* src/Selectors/_SelectorFactory.py:
	Share button on notetab, enable note selector, normal drag and drop

2007-10-19  Gary Burton <gary.burton@zen.co.uk>
	* src/DisplayTabs/_EmbeddedList.py:
	* src/DisplayTabs/_ButtonTab.py:
	ENTER is edit on embedded lists, issue #1296

2007-10-18  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/BasicUtils/_NameDisplay.py: bug in making patterns with uppercase

2007-10-18  Benny Malengier  <benny.malengier@gramps-project.org>
	* src/DisplayTabs/__init__.py: add note backref
	* src/glade/gramps.glade: add notebook to note editor to show backref
	* src/DisplayTabs/_NoteTab.py: import editnote in method to avoid import loop
	* src/Editors/_EditNote.py: add notetab of backreferences
	* src/DisplayTabs/_NoteBackRefList.py: note backreferences list