@@ -1404,12 +1404,6 @@ class FamilyLinesDialog(ReportDialog):
     def setup_format_frame(self):
         """Do nothing, since we don't want a format frame"""
         pass
-    
-    def setup_post_process(self):
-        """The format frame is not used in this dialog.  Hide it, and
-        set the output notebook to always display the html template
-        page."""
-        pass
 
     def parse_format_frame(self):
         """The format frame is not used in this dialog."""
